<?xml version="1.0"?>
<package format="2">
    <name>vgn</name>
    <version>0.0.1</version>
    <description>Volumetric Grasping Network.</description>

    <maintainer email="mbreyer@ethz.ch">Michel Breyer</maintainer>

    <license>TODO</license>
    <url></url>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

    <depend>franka_msgs</depend>
    <depend>franka_gripper</depend>
    <depend>rospy</depend>
</package>
