<?xml version="1.0"?>
<package format="2">
    <name>vgn</name>
    <version>0.1.0</version>
    <description>Volumetric Grasping Network.</description>

    <maintainer email="mbreyer@ethz.ch">Michel Breyer</maintainer>

    <license>BSD</license>
    <url>https://github.com/ethz-asl/vgn</url>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>rospy</depend>
</package>
