<?xml version="1.0"?>
<package format="2">
    <name>vgn_ros</name>
    <version>0.0.1</version>
    <description>ROS tools for the volumetric grasping network.</description>

    <author email="michel.breyer@mavt.ethz.ch">Michel Breyer</author>

    <maintainer email="michel.breyer@mavt.ethz.ch">Michel Breyer</maintainer>

    <license>TODO</license>
    <url></url>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

    <depend>message_generation</depend>
    <depend>message_runtime</depend>

    <depend>actionlib</depend>
    <depend>actionlib_msgs</depend>
    <depend>rospy</depend>

    <depend>vgn</depend>
</package>
